# computer_vision_itba

./: .gitignore  1-CNN-Teoria.ipynb  2-Fashion-MNIST-CNN-LeNet-5.ipynb  pyproject.toml
